# directory-hasher

./: Cargo.toml  README.md
src/: lib.rs  main.rs
test_data/one/: bacon.test
test_data/two/subtwo/: bacon.test  two.test
