[package]
name = "directory-hasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "~0.4.3"
sha3 = "~0.10.0"
thiserror = "1.0"
walkdir = "~2.3.2"
#jwalk = "~0.6.0"
#rayon = "~1.5.1"

[dev-dependencies]
hex-literal = "~0.3.4"
