[package]
name = "directory-hasher"
version = "0.2.0"
authors = ["Jonas A. Hultén <jonas@sldr.se>"]
repository = "https://github.com/DrSLDR/directory-hasher"
homepage = "https://github.com/DrSLDR/directory-hasher"
license = "Apache-2.0 OR MIT"
description = "Utility for reducing a whole directory tree to a single hash digest"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10"
walkdir = "2.3"

[dev-dependencies]
hex-literal = "0.3"
